Fix the eye dropper cursor of DevTools

|updateCursor:| might be called outside the view bounds. Check the mouse
location before setting the cursor. Also, do not set cursor if it's not a
key window.

Bug: 837182
Change-Id: Idd2f12648e858284c6fc4cb1ba3b03eb7ad4f274
Reviewed-on: https://chromium-review.googlesource.com/1039283
Reviewed-by: Avi Drissman <avi@chromium.org>
Reviewed-by: Trent Apted <tapted@chromium.org>
Commit-Queue: Avi Drissman <avi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555979}
Former-commit-id: fcee59f1c00ec3d0e6dbd8b1b3bf916ccdfea481